--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,4 +29,6 @@ extra_css:
 nav:
   - About: index.md
   - Syllabus: syllabus.md
+  - Assignments: 
+      - Assignment 1: pa/pa1.md
   - Contact information: contact.md
