added pa2 initial md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,4 +31,5 @@ nav:
   - Syllabus: syllabus.md
   - Assignments: 
       - Assignment 1: pa/pa1.md
+      - Assignment 2: pa/pa2.md
   - Contact information: contact.md
