--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,4 +32,5 @@ nav:
   - Assignments: 
       - Assignment 1: pa/pa1.md
       - Assignment 2: pa/pa2.md
+      - Assignment 3: pa/pa3.md
   - Contact information: contact.md
