notes for today

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,4 +33,6 @@ nav:
       - Assignment 1: pa/pa1.md
       - Assignment 2: pa/pa2.md
       - Assignment 3: pa/pa3.md
+  - Lecture notes: 
+      - SRF, XSS, SQLi: notes/lecture13.md
   - Contact information: contact.md
