--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,5 +34,5 @@ nav:
       - Assignment 2: pa/pa2.md
       - Assignment 3: pa/pa3.md
   - Lecture notes: 
-      - SRF, XSS, SQLi: notes/lecture13.md
+      - CSRF, XSS, SQLi: notes/lecture13.md
   - Contact information: contact.md
