--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
       - Assignment 1: pa/pa1.md
       - Assignment 2: pa/pa2.md
       - Assignment 3: pa/pa3.md
+      - Assignment 4: pa/pa4.md
   - Lecture notes: 
       - CSRF, XSS, SQLi: notes/lecture13.md
   - Contact information: contact.md
