make for nadia to pull

--- a/cse127-fall19/Makefile
+++ b/cse127-fall19/Makefile
@@ -7,8 +7,8 @@ publish: build
 	cd ..  && git subtree split --prefix cse127-fall19/site -b site 
 	git push -f origin site:site
 	git branch -D site
-	#ssh dstefan@login.eng.ucsd.edu 'cd /cse/htdocs/classes/fa19/cse127-b/ && git fetch && git reset --hard origin/site'
-	ssh dstefan@login.eng.ucsd.edu 'cd public_html/cse127-fall19/ && git fetch && git reset --hard origin/site'
+	ssh login.eng.ucsd.edu 'cd /cse/htdocs/classes/fa19/cse127-ab/ && git fetch && git reset --hard origin/site'
+	#ssh dstefan@login.eng.ucsd.edu 'cd public_html/cse127-fall19/ && git fetch && git reset --hard origin/site'
 remove:
 	git push origin :site
 install:
