--- a/cse127-fall19/mkdocs.yml
+++ b/cse127-fall19/mkdocs.yml
@@ -30,3 +30,6 @@ nav:
   - About: index.md
   - Syllabus: syllabus.md
   - Contact information: contact.md
+  - Assignments:
+    - Assignment 1: pa/pa1.md
+
