--- a/cse127-winter20/mkdocs.yml
+++ b/cse127-winter20/mkdocs.yml
@@ -30,3 +30,5 @@ nav:
   - About: index.md
   - Syllabus: syllabus.md
   - Contact Info and Office Hours: contact.md
+  - Assignments:
+    - Assignment 1: pa/pa1.md
