--- a/cse127-winter20/Makefile
+++ b/cse127-winter20/Makefile
@@ -14,4 +14,5 @@ install:
 	sudo pip install mkdocs
 	sudo pip install mkdocs-material
 	sudo pip install mkdocs-include
+	sudo pip install pygments
 
