Assingment 2 writeup for WI 20

--- a/cse127-winter20/mkdocs.yml
+++ b/cse127-winter20/mkdocs.yml
@@ -33,5 +33,6 @@ nav:
   - Contact Info and Office Hours: contact.md
   - Assignments:
     - Assignment 1: pa/pa1.md
+    - Assignment 2: pa/pa2.md
   - Notes:
     - Stack smashing: notes/bufferoverflow.md
