--- a/cse127-winter20/mkdocs.yml
+++ b/cse127-winter20/mkdocs.yml
@@ -35,5 +35,6 @@ nav:
     - Assignment 1: pa/pa1.md
     - Assignment 2: pa/pa2.md
     - Assignment 3: pa/pa3.md
+    - Assignment 4: pa/pa4.md
   - Notes:
     - Stack smashing: notes/bufferoverflow.md
