--- a/cse127-winter20/mkdocs.yml
+++ b/cse127-winter20/mkdocs.yml
@@ -37,5 +37,6 @@ nav:
     - Assignment 3: pa/pa3.md
     - Assignment 4: pa/pa4.md
     - Assignment 5: pa/pa5.md
+    - Assignment 6: pa/pa6.md
   - Notes:
     - Stack smashing: notes/bufferoverflow.md
